--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "replay": "tsx src/workers/replay.ts",
     "release:alpha": "pnpm install && pnpm test && node scripts/release_tag.cjs",
     "worker:base_usdc": "tsx src/workers/reconcile_base_usdc.ts",
-    "mcp": "node --no-warnings --loader tsx src/mcp/server.ts",
+    "mcp": "node --import tsx src/mcp/server.ts",
     "mcp:smoke": "tsx scripts/mcp_smoke_test.ts",
     "preflight": "tsx scripts/preflight.ts",
     "keys:mint": "tsx scripts/keys_mint.ts",
     "agent:init": "tsx scripts/agent_init.ts",
-    "env:print": "tsx scripts/env_print.ts"
+    "env:print": "tsx scripts/env_print.ts",
+    "polymarket:dryrun": "tsx scripts/polymarket_dryrun.ts"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
