phase4: stable mcp + trading gate + kill switch + daily limits

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ BIND_APPROVAL_UI=false
 CARD_MODE=dev
 CARD_WEBHOOK_SHARED_SECRET=
 ADMIN_API_KEY=change_me
+# Optional alias used by MCP server tooling (falls back to ADMIN_API_KEY)
+BLOOM_ADMIN_KEY=
 ENV_TYPE=base_usdc
 ENV_STALE_SECONDS=60
 ENV_UNKNOWN_SECONDS=300
@@ -22,3 +24,48 @@ DEV_MASTER_MNEMONIC=REPLACE_WITH_DEV_ONLY_MNEMONIC
 BLOOM_BASE_URL=http://localhost:3000
 BLOOM_READ_KEY=
 BLOOM_PROPOSE_KEY=
+BLOOM_EXECUTE_KEY=
+
+# Polymarket Phase 1 dry-run
+BLOOM_ALLOW_POLYMARKET=true
+BLOOM_ALLOW_POLYMARKET_AGENT_IDS=agent_ej
+POLY_DRYRUN_MAX_PER_ORDER_CENTS=500
+POLY_DRYRUN_MAX_OPEN_HOLDS_CENTS=2000
+POLY_DRYRUN_MAX_OPEN_ORDERS=20
+POLY_DRYRUN_LOOP_SECONDS=30
+
+# Polymarket Phase 2 real mode (optional)
+POLY_MODE=dryrun
+POLY_CLOB_HOST=https://clob.polymarket.com
+POLY_GAMMA_HOST=https://gamma-api.polymarket.com
+POLY_DATA_HOST=https://data-api.polymarket.com
+POLY_CHAIN_ID=137
+POLY_PRIVATE_KEY=
+POLY_API_KEY=
+POLY_API_SECRET=
+POLY_API_PASSPHRASE=
+POLY_BOT_AGENT_ID=agent_ej
+POLY_BOT_LOOP_SECONDS=60
+POLY_BOT_TRADING_ENABLED=false
+
+# Polymarket Phase 4 trading gate (real mode limits)
+POLY_MAX_PER_ORDER_CENTS=10
+POLY_MAX_PER_DAY_CENTS=50
+POLY_MAX_OPEN_HOLDS_CENTS=20
+POLY_MAX_OPEN_ORDERS=5
+
+# Phase 4 bot trading config (used when POLY_BOT_TRADING_ENABLED=true)
+POLY_TRADE_TOKEN_ID=
+POLY_TRADE_MARKET_SLUG=
+POLY_TRADE_PRICE=
+POLY_TRADE_SIZE=
+POLY_MIN_SECONDS_BETWEEN_TRADES=3600
+POLY_TRADE_AUTO_APPROVE=false
+
+# Auto-approve config (for step-up bypass)
+BLOOM_AUTO_APPROVE_AGENT_IDS=agent_ej
+BLOOM_AUTO_APPROVE_TRANSFER_MAX_CENTS=200
+BLOOM_AUTO_APPROVE_TO=
+
+# MCP public URL for ChatGPT Desktop (stable tunnel)
+BLOOM_MCP_PUBLIC_URL=
