--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "scripts": {
     "dev": "tsx watch src/api/server.ts",
+    "web:dev": "pnpm -C web dev",
+    "dev:all": "node scripts/dev_all.mjs",
     "build": "tsc -p tsconfig.json",
     "start": "tsx src/api/server.ts",
     "migrate": "tsx src/db/migrate.ts",
