--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 DB_PATH=/data/kernel.db
+CONSOLE_DB_PATH=
+ALLOW_NEW_KERNEL=false
+CREATE_NEW_KERNEL=false
 PORT=3000
 APPROVAL_UI_PORT=3001
 BIND_APPROVAL_UI=false
@@ -22,3 +25,6 @@ DEV_MASTER_MNEMONIC=REPLACE_WITH_DEV_ONLY_MNEMONIC
 BLOOM_BASE_URL=http://localhost:3000
 BLOOM_READ_KEY=
 BLOOM_PROPOSE_KEY=
+ANTHROPIC_API_KEY=
+ANTHROPIC_MODEL=claude-3-5-sonnet-20240620
+CONSOLE_BOOTSTRAP_TOKEN=
